styles/redlookit.css
/* ... */
.replied-comment {
    /* text-indent: 1.3em; */
    /* margin-left: 1.5rem; */
    border-left: 1px solid var(--border-color);
    padding-left: 10px;
    padding-right: 10px;
}

.btn-more {
    cursor: pointer;
    margin-left: 10px;
    width: 100%;
    height: 1.2em;
    border-radius: 0.25em;
    display: inline-block;
    /* background-color: var(--post-background); */
    background-color: var(--background-color);
    color: var(--post-background);
    -webkit-transition: background-color 100ms, color 100ms;
    -moz-transition:    background-color 100ms, color 100ms;
    -ms-transition:     background-color 100ms, color 100ms;
    -o-transition:      background-color 100ms, color 100ms;
    transition:         background-color 100ms, color 100ms;
}
.btn-more:hover {
    background-color: var(--border-color);
    color: var(--text-color);
}
.btn-more:hover::before {
    content: "More replies";
    display: inline-block;
    height: 1em;
    position: relative;
    top: -0.175em;
    left: 1em;
}
.btn-more.waiting:hover::before {
    content: "Loading...";
}

button .menu {
    padding: 0;
    width: 32px !important;
    height: 32px !important;
}

.menu:focus {
    background-color: var(--border-color-2);
    outline: 1px solid var(--post-color);
}
.menu:hover {
    background-color: var(--background-color);
    outline: 1px solid var(--outline);
}

.navbar {
    background-color: var(--navbar-color);
    padding: 0;
    margin-right: auto !important;
    display: flex;
    flex-wrap: nowrap;
    /* justify-content: space-around !important; */
    justify-content: flex-start;
    flex-direction: row !important;
    align-items: center;
    /* background-image: none; */
    /* width: 100vw !important; */
}


.menu-buttons {
    display: flex;
    /* justify-self: flex-start !important; */
    align-items: center;
    justify-content: flex-end;
    /* width: 100%; */
    flex: 1;
}

.logo {
    font-size: 16px;
    padding: 0px 0px 0px 8px;
    color: white;
    font-weight: 600;
    /* position: absolute;
    top: 26%;
    left: 4%; */
    /* align-content: flex-start !important;
    flex-grow: 1; */
    /* margin: 0 auto 0 0 !important; */
    /* margin-right: 50px !important; */
    /* width: 10px !important; */
    /* font-family: SegoeUI-SemiBold-final,Segoe UI Semibold,SegoeUI-Regular-final,Segoe UI,"Segoe UI Web (West European)",Segoe,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,Tahoma,Helvetica,Arial,sans-serif; */
    /* z-index: 3; */
}

.search {
    /* background-color: #; */
    /* background-color: #382963; */
    background: url(https://img.icons8.com/windows/32/ffffff/search--v1.png);
    background-position: 16px 6px;
    background-size: 20px 20px;
    background-color: var(--searchbar-unselected);
    color: var(--text-color);
    background-repeat: no-repeat;
    border: none;
    border-radius: 3px;
    font-size: 14px;
    display: inline;
    max-width: 350px;
    width: 350px;
    padding: 5px 0 5px 50px;
    /* padding: 5px 150px 5px 48px; */
    margin-left: 180px;
    transition: 0.16s ease-in;
    height: 32px;
    backdrop-filter: blur(2px);
}

.light .search {
    /* background-color: #; */
    /* background-color: #382963; */
    background: url(https://img.icons8.com/windows/32/000000/search--v1.png);
    background-position: 16px 6px;
    background-size: 20px 20px;
    background-color: var(--searchbar-unselected);
    color: var(--text-color);
    background-repeat: no-repeat;
    border: none;
    border-radius: 3px;
    font-size: 14px;
    display: inline;
    max-width: 350px;
    width: 350px;
    padding: 5px 0 5px 50px;
    /* padding: 5px 150px 5px 48px; */
    margin-left: 180px;
    transition: 0.16s ease-in;
    height: 32px;
}

.search::placeholder {
    color: var(--placeholder);
}

.search:focus, input:focus{
    outline: none;
    background-color: var(--searchbar-selected);
    color: var(--text-color-1);
    /* color: white; */
    /* padding: 5px 140px 5px 48px; */
}

/* Style the button that is used to open and close the collapsible content */
.collapsible {
    cursor: pointer;
    text-align: left;
    font-weight: 600;
    outline: none;
    color: var(--text-color) !important;
    /* margin: 0 !important; */
    padding: 0 !important;
}

.collapsible:hover, .collapsible:focus, .collapsible:active {
    background-color: var(--background-color) !important;
}


.collapsible>.ms-Icon {
    margin: 5px 16px 0 23px;
    font-size: 10px;
    /* font-family: FabricIcons; */
}
.collapses .ms-Icon {
    padding-left: 38px;
}
.collapses .ms-Icon {
    padding-left: 38px;
}

/* Style the collapsible content. Note: hidden by default */
.content {
    /* padding: 0 18px; */
    display: none;
    overflow: hidden;
}

.md-spoiler-text {
    background-color: var(--post-color) !important;
    cursor: pointer;
}

.collapses button:active, .subreddit.button:active, .collapses button.selected:active, .subreddit.button.selected:active {
    background-color: var(--outline);
}

.collapses button.selected, .subreddit.button.selected {
    background-color: var(--menu-selector-button-focus);
}

nav span button {
    display: inline-block;
    background-color: var(--navbar-color);
    color: white;
    border: none;
    width: 48px;
    height: 48px;
    backdrop-filter: blur(2px);
}

nav span button:hover {
    background-color: var(--new-msg) !important;
}

nav span button:focus {
    outline: none;
}

header {
    background-color: var(--background-color);
    width: 100%;
    /* min-height: 45px; */
    /* height: 45px; */
    /* border-bottom: 1px solid var(--border-color-2); */
    z-index: 1;
    min-height: 76px;
    height: 76px !important;
    flex-direction: column;

}
/* ... */

